--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.6",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
