--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "minio": "^8.0.6",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
