--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.21.3",
     "@testcontainers/postgresql": "^11.9.0",
+    "@types/adm-zip": "^0.5.7",
+    "adm-zip": "^0.5.16",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,6 +42,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@stryker-mutator/vitest-runner": "^9.4.0",
     "@tailwindcss/postcss": "^4",
     "@testcontainers/minio": "^11.9.0",
     "@testing-library/dom": "^10.4.1",
